GNOME Bugzilla – Bug 696091
Fixes to window size regressions
Last modified: 2013-03-18 19:10:44 UTC
- The first fixes a warning about when trying to to remove sync_request_timeout_id when it didn't exist. - The second fixes (embarassingly) a complete total breakage of the effect of _NET_WM_SYNC_REQUEST.
Created attachment 239174 [details] [review] Handle spontaneous frames during a resize During a resize, if we don't have a configure pending, then a counter change shouldn't trigger anything other than the normal drawing: it's just a spontaneous frame from the application. So don't try to update the position or remove our timeout ID.
Created attachment 239175 [details] [review] Don't configure a window before it responds to _NET_WM_SYNC_REQUEST In 97a4cc8c, we accidentally lost the checkout that kept us from sending multiple configures to a window before it responds to _NET_WM_SYNC_REQUEST. So _NET_WM_SYNC_REQUEST stopped working properly. Add a check back with the same effect.
Review of attachment 239174 [details] [review]: OK.
Review of attachment 239175 [details] [review]: "lost the checkout" should probably be "lost the check". Though, when typing that, I typed "checkout" twice, too. It's hard to break habit. ::: src/core/window.c @@ +9416,3 @@ +#ifdef HAVE_XSYNC + /* If we're waiting for a request for _NET_WM_SYNC_REQUEST, we'll + * resize the window when the winow responds, or when we time typo
Attachment 239174 [details] pushed as 7a8c45d - Handle spontaneous frames during a resize Attachment 239175 [details] pushed as 8a33880 - Don't configure a window before it responds to _NET_WM_SYNC_REQUEST